<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/corruption_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="14dp"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/corruption_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/corruption_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:hint="@string/title_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_wrapper"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:lines="8"
                android:minLines="8"
                android:gravity="start"
                android:layout_gravity="start"
                android:maxLines="10"
                android:inputType="textCapSentences|textMultiLine"
                android:hint="@string/description_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_captured"
            android:layout_width="match_parent"
            android:layout_marginTop="-50dp"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>

