<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="#ffffff"
    android:id="@+id/fullscreen_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@mipmap/splash_screen"
        android:layout_weight=".3"
        android:layout_height="0dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7">

        <ScrollView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/get_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/report_corruption"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button"
                    android:text="@string/report_corruption"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/record_corruption"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_button"
                    android:text="@string/record_corruption"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>